[package]
name = "easegress-macros"
version = "0.1.1"
edition = "2021"
authors = ["Megaease Team <service@megaese.com>"]
license = "Apache-2.0"
description = "Macros to support the `easegress-sdk` crate and remove FFI boilerplate / conversion from user code."

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0.103", features = ["full"] }
proc-macro2 = "1.0.47"
quote = "1.0.21"
